<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    		xmlns:tools="http://schemas.android.com/tools"
    		tools:context=".MainActivity"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button 
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop1"
                 />

            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop3" />

            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop5"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop6"/>

            <Button
                android:id="@+id/button7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop7"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop8"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop9"/>

            <Button
                android:id="@+id/button10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop10"/>

            <Button
                android:id="@+id/button11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop11"/>

            <Button
                android:id="@+id/button12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop12"/>

            <Button
                android:id="@+id/button13"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop13"/>

            <Button
                android:id="@+id/button14"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop14"/>
            
            <Button
                android:id="@+id/button15"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop15"/>
            
            <Button
                android:id="@+id/button16"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop16"/>
            
            <Button
                android:id="@+id/button17"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop17"/>
            
            <Button
                android:id="@+id/button18"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop18"/>
            
            <Button
                android:id="@+id/button19"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop19"/>
            
            <Button
                android:id="@+id/button20"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop20"/>
            
            <Button
                android:id="@+id/button21"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop21"/>
            
            <Button
                android:id="@+id/button22"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop22"/>
            
            <Button
                android:id="@+id/button23"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop23"/>
            
            <Button
                android:id="@+id/button24"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop24"/>
            
            <Button
                android:id="@+id/button25"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop25"/>
            
            <Button
                android:id="@+id/button26"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop26"/>
            
            <Button
                android:id="@+id/button27"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop27"/>
            
            <Button
                android:id="@+id/button28"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop28"/>
            
            <Button
                android:id="@+id/button29"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop29"/>
            
            <Button
                android:id="@+id/button30"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop30"/>
            
            <Button
                android:id="@+id/button31"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop31"/>
            
            <Button
                android:id="@+id/button32"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop32"/>
            
            <Button
                android:id="@+id/button33"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop33"/>
            
            <Button
                android:id="@+id/button34"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prop34"/>
        </LinearLayout>
    </ScrollView>

